--- a/subscribe/config/config.json
+++ b/subscribe/config/config.json
@@ -74,7 +74,7 @@
             }
         },
         "telegram": {
-            "enable": true,
+            "enable": false,
             "pages": 40,
             "exclude": "",
             "users": {
